import { Model } from '@okta/courage';
import AutoRedirectView from 'v2/view-builder/views/AutoRedirectView';
import AppState from 'v2/models/AppState';
import Settings from 'models/Settings';
import SuccessWithAppUser from '../../../../../../playground/mocks/data/idp/idx/success-with-app-user.json';
import { INTERSTITIAL_REDIRECT_VIEW } from 'v2/ion/RemediationConstants';
import utilSpy from '../../../../../../src/util/Util';

describe('v2/view-builder/views/AutoRedirectView', function() {
  const wait = (timeout) => {
    return new Promise((resolve) => {
      setTimeout(resolve, timeout);
    });
  };

  let testContext;
  let settings = new Settings({
    baseUrl: 'http://localhost:3000',
    'interstitialBeforeLoginRedirect': null
  });
  beforeEach(function() {
    jest.spyOn(utilSpy, 'isAndroidOVEnrollment').mockReturnValue(false);
    testContext = {};
    testContext.init = (user = SuccessWithAppUser.user.value, app = SuccessWithAppUser.app.value) => {
      const appState = new AppState({}, {});
      appState.set('user', user);
      appState.set('app', app);

      testContext.view = new AutoRedirectView({
        appState,
        settings,
        currentViewState: {},
        model: new Model(),
      });
      testContext.view.render();
    };
  });
  afterEach(function() {
    jest.resetAllMocks();
  });

  it('view renders corectly - default case', function() {
    testContext.init();
    expect(testContext.view.el).toMatchSnapshot();
  });

  it('view renders correctly according to interstitialBeforeLoginRedirect', function() {
    settings = new Settings({
      baseUrl: 'http://localhost:3000',
      'interstitialBeforeLoginRedirect': INTERSTITIAL_REDIRECT_VIEW.NONE
    });
    testContext.init();
    expect(testContext.view.el).toMatchSnapshot('should NOT render spinner');

    settings = new Settings({
      baseUrl: 'http://localhost:3000',
      'interstitialBeforeLoginRedirect': INTERSTITIAL_REDIRECT_VIEW.DEFAULT
    });
    testContext.init();
    expect(testContext.view.el).toMatchSnapshot('should have spinner, app name, and user identifier');
  });


  it('renders user identifier in title when features.showIdentifier is false', function() {
    settings = new Settings({
      baseUrl: 'http://localhost:3000',
      'interstitialBeforeLoginRedirect': INTERSTITIAL_REDIRECT_VIEW.DEFAULT,
      'features.showIdentifier': false,
    });
    testContext.init();
    expect(testContext.view.el).toMatchSnapshot('should show identifier in title');
  });

  it('renders custom error message', function() {
    settings = new Settings({
      baseUrl: 'http://localhost:3000',
      'interstitialBeforeLoginRedirect': INTERSTITIAL_REDIRECT_VIEW.DEFAULT,
    });
    const appState = new AppState({}, {});
    appState.set('messages', {
      'value': [
        {
          'message': 'You do not have permission to perform the requested action.',
          'links': [
            {'label': 'Help link 1', 'url': 'https://www.okta.com/'},
            {'label': 'Help link 2', 'url': 'https://www.okta.com/help?page=1'}
          ],
          'i18n': {
            'key': 'security.access_denied_custom_message'
          },
          'class': 'ERROR'
        }
      ]
    });
    testContext.view = new AutoRedirectView({
      appState,
      settings,
      currentViewState: {},
      model: new Model(),
    });
    testContext.view.render();

    expect(testContext.view.$el.html()).toMatchSnapshot();
  });

  describe('Android OV Enrollment', () => {

    beforeEach(() => {
      settings = new Settings({
        baseUrl: 'http://localhost:3000',
        'interstitialBeforeLoginRedirect': INTERSTITIAL_REDIRECT_VIEW.DEFAULT,
      });

      Object.defineProperty(window, 'location', {
        value: {
          href: 'https://somelink.com',
        }
      });

      jest.spyOn(utilSpy, 'redirectWithFormGet').mockReturnValue(() => {});
      jest.spyOn(AppState.prototype, 'getCurrentViewState').mockReturnValue({href:'https://org.okta.com/login/token/redirect?stateToken=mockedStateToken123'});

      const appState = new AppState({}, {});
      testContext.view = new AutoRedirectView({
        appState,
        settings,
        currentViewState: {},
        model: new Model(),
      });
    });

    it.each([
      'NONE',
      'DEFAULT',
      null,
    ])('should add user gesture if OV enrollment on Android with interstitialBeforeLoginRedirect = "%s"', async function(interstitialBeforeLoginRedirect) {
      settings = new Settings({
        baseUrl: 'http://localhost:3000',
        'interstitialBeforeLoginRedirect': interstitialBeforeLoginRedirect,
      });
      jest.spyOn(utilSpy, 'isAndroidOVEnrollment').mockReturnValue(true);
      testContext.init();
      await wait(300); // wait for beacon animation
      expect(testContext.view.el).toMatchSnapshot('should show user gesture');
    });

    it('Do not add User Gesture if not OV enrollment on Android', () => {
      jest.spyOn(utilSpy, 'isAndroidOVEnrollment').mockReturnValue(false);
      testContext.init();
      expect(testContext.view.el).toMatchSnapshot('should not show user gesture');
    });

  });
});
