// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v2/view-builder/views/AutoRedirectView Android OV Enrollment Do not add User Gesture if not OV enrollment on Android: should not show user gesture 1`] = `
<div
  class="siw-main-view "
>
  <div
    class="siw-main-header"
  >
    <div />
  </div>
  <div
    class="siw-main-body"
  >
    <form
      action="/"
      class="ion-form o-form o-form-edit-mode"
      data-se="o-form"
      id="form161"
      method="POST"
      slot="content"
    >
      <div
        class="o-form-content o-form-theme clearfix"
        data-se="o-form-content"
      >
        <h2
          class="okta-form-title o-form-head"
          data-se="o-form-head"
        >
          Signing in to Okta Administration
        </h2>
        <div
          class="identifier-container"
        >
          <span
            class="identifier no-translate"
            data-se="identifier"
            title="testUser@okta.com"
          >
            testUser@okta.com
          </span>
        </div>
        <div
          class="o-form-info-container"
        />
        <div
          class="o-form-error-container"
          data-se="o-form-error-container"
          role="alert"
        />
        <div
          class="o-form-fieldset-container"
          data-se="o-form-fieldset-container"
        >
          <div
            class="okta-waiting-spinner"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    class="siw-main-footer"
  >
    <div
      class="auth-footer"
    />
  </div>
</div>
`;

exports[`v2/view-builder/views/AutoRedirectView Android OV Enrollment should add user gesture if OV enrollment on Android with interstitialBeforeLoginRedirect = "DEFAULT": should show user gesture 1`] = `
<div
  class="siw-main-view "
>
  <div
    class="siw-main-header"
  >
    <div>
      <div>
        <div
          class="beacon-container"
          data-type="beacon-container"
          style="transform: scale(1, 1); text-indent: 1px;"
        >
          <div
            class="beacon-blank auth-beacon"
          >
            <div
              class="beacon-blank js-blank-beacon-border auth-beacon-border"
            />
          </div>
          <div
            class="bg-helper auth-beacon auth-beacon-factor mfa-okta-verify"
            data-se="factor-beacon"
          >
            <div
              class="okta-sign-in-beacon-border auth-beacon-border"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="siw-main-body"
  >
    <form
      action="/"
      class="ion-form o-form o-form-edit-mode"
      data-se="o-form"
      id="form119"
      method="POST"
      slot="content"
    >
      <div
        class="o-form-content o-form-theme clearfix"
        data-se="o-form-content"
      >
        <h2
          class="okta-form-title o-form-head"
          data-se="o-form-head"
        >
          To continue, tap "Open Okta Verify"
        </h2>
        <div
          class="identifier-container"
        >
          <span
            class="identifier no-translate"
            data-se="identifier"
            title="testUser@okta.com"
          >
            testUser@okta.com
          </span>
        </div>
        <div
          class="o-form-info-container"
        />
        <div
          class="o-form-error-container"
          data-se="o-form-error-container"
          role="alert"
        />
        <div
          class="o-form-fieldset-container"
          data-se="o-form-fieldset-container"
        >
          <a
            class="ul-button button button-wide button-primary hide-underline link-button"
            data-se="button"
            href="#"
            id="launch-enrollment-ov"
          >
            Open Okta Verify
          </a>
        </div>
      </div>
    </form>
  </div>
  <div
    class="siw-main-footer"
  >
    <div
      class="auth-footer"
    />
  </div>
</div>
`;

exports[`v2/view-builder/views/AutoRedirectView Android OV Enrollment should add user gesture if OV enrollment on Android with interstitialBeforeLoginRedirect = "NONE": should show user gesture 1`] = `
<div
  class="siw-main-view "
>
  <div
    class="siw-main-header"
  >
    <div>
      <div>
        <div
          class="beacon-container"
          data-type="beacon-container"
          style="transform: scale(1, 1); text-indent: 1px;"
        >
          <div
            class="beacon-blank auth-beacon"
          >
            <div
              class="beacon-blank js-blank-beacon-border auth-beacon-border"
            />
          </div>
          <div
            class="bg-helper auth-beacon auth-beacon-factor mfa-okta-verify"
            data-se="factor-beacon"
          >
            <div
              class="okta-sign-in-beacon-border auth-beacon-border"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="siw-main-body"
  >
    <form
      action="/"
      class="ion-form o-form o-form-edit-mode"
      data-se="o-form"
      id="form97"
      method="POST"
      slot="content"
    >
      <div
        class="o-form-content o-form-theme clearfix"
        data-se="o-form-content"
      >
        <h2
          class="okta-form-title o-form-head"
          data-se="o-form-head"
        >
          To continue, tap "Open Okta Verify"
        </h2>
        <div
          class="identifier-container"
        >
          <span
            class="identifier no-translate"
            data-se="identifier"
            title="testUser@okta.com"
          >
            testUser@okta.com
          </span>
        </div>
        <div
          class="o-form-info-container"
        />
        <div
          class="o-form-error-container"
          data-se="o-form-error-container"
          role="alert"
        />
        <div
          class="o-form-fieldset-container"
          data-se="o-form-fieldset-container"
        >
          <a
            class="ul-button button button-wide button-primary hide-underline link-button"
            data-se="button"
            href="#"
            id="launch-enrollment-ov"
          >
            Open Okta Verify
          </a>
        </div>
      </div>
    </form>
  </div>
  <div
    class="siw-main-footer"
  >
    <div
      class="auth-footer"
    />
  </div>
</div>
`;

exports[`v2/view-builder/views/AutoRedirectView Android OV Enrollment should add user gesture if OV enrollment on Android with interstitialBeforeLoginRedirect = "null": should show user gesture 1`] = `
<div
  class="siw-main-view "
>
  <div
    class="siw-main-header"
  >
    <div>
      <div>
        <div
          class="beacon-container"
          data-type="beacon-container"
          style="transform: scale(1, 1); text-indent: 1px;"
        >
          <div
            class="beacon-blank auth-beacon"
          >
            <div
              class="beacon-blank js-blank-beacon-border auth-beacon-border"
            />
          </div>
          <div
            class="bg-helper auth-beacon auth-beacon-factor mfa-okta-verify"
            data-se="factor-beacon"
          >
            <div
              class="okta-sign-in-beacon-border auth-beacon-border"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="siw-main-body"
  >
    <form
      action="/"
      class="ion-form o-form o-form-edit-mode"
      data-se="o-form"
      id="form141"
      method="POST"
      slot="content"
    >
      <div
        class="o-form-content o-form-theme clearfix"
        data-se="o-form-content"
      >
        <h2
          class="okta-form-title o-form-head"
          data-se="o-form-head"
        >
          To continue, tap "Open Okta Verify"
        </h2>
        <div
          class="identifier-container"
        >
          <span
            class="identifier no-translate"
            data-se="identifier"
            title="testUser@okta.com"
          >
            testUser@okta.com
          </span>
        </div>
        <div
          class="o-form-info-container"
        />
        <div
          class="o-form-error-container"
          data-se="o-form-error-container"
          role="alert"
        />
        <div
          class="o-form-fieldset-container"
          data-se="o-form-fieldset-container"
        >
          <a
            class="ul-button button button-wide button-primary hide-underline link-button"
            data-se="button"
            href="#"
            id="launch-enrollment-ov"
          >
            Open Okta Verify
          </a>
        </div>
      </div>
    </form>
  </div>
  <div
    class="siw-main-footer"
  >
    <div
      class="auth-footer"
    />
  </div>
</div>
`;

exports[`v2/view-builder/views/AutoRedirectView renders custom error message 1`] = `"<div class=\\"siw-main-header\\"><div></div></div><div class=\\"siw-main-body\\"><form method=\\"POST\\" action=\\"/\\" data-se=\\"o-form\\" slot=\\"content\\" id=\\"form73\\" class=\\"ion-form o-form o-form-edit-mode\\"><div data-se=\\"o-form-content\\" class=\\"o-form-content o-form-theme clearfix\\"><h2 data-se=\\"o-form-head\\" class=\\"okta-form-title o-form-head\\">Signing in</h2><div class=\\"o-form-info-container\\"></div><div class=\\"o-form-error-container\\" data-se=\\"o-form-error-container\\" role=\\"alert\\"></div><div class=\\"o-form-fieldset-container\\" data-se=\\"o-form-fieldset-container\\"><div data-se=\\"callout\\" class=\\"infobox clearfix infobox-error\\"><span data-se=\\"icon\\" class=\\"icon error-16\\"></span><div class=\\"custom-access-denied-error-message\\"><p>You do not have permission to perform the requested action.</p><ul class=\\"custom-links\\"><li><a href=\\"https://www.okta.com/\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Help link 1</a></li><li><a href=\\"https://www.okta.com/help?page=1\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Help link 2</a></li></ul></div></div><div class=\\"okta-waiting-spinner\\"></div></div></div></form></div><div class=\\"siw-main-footer\\"><div class=\\"auth-footer\\"></div></div>"`;

exports[`v2/view-builder/views/AutoRedirectView renders user identifier in title when features.showIdentifier is false: should show identifier in title 1`] = `
<div
  class="siw-main-view "
>
  <div
    class="siw-main-header"
  >
    <div />
  </div>
  <div
    class="siw-main-body"
  >
    <form
      action="/"
      class="ion-form o-form o-form-edit-mode"
      data-se="o-form"
      id="form56"
      method="POST"
      slot="content"
    >
      <div
        class="o-form-content o-form-theme clearfix"
        data-se="o-form-content"
      >
        <h2
          class="okta-form-title o-form-head"
          data-se="o-form-head"
        >
          Signing in to Okta Administration as testUser@okta.com
        </h2>
        <div
          class="o-form-info-container"
        />
        <div
          class="o-form-error-container"
          data-se="o-form-error-container"
          role="alert"
        />
        <div
          class="o-form-fieldset-container"
          data-se="o-form-fieldset-container"
        >
          <div
            class="okta-waiting-spinner"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    class="siw-main-footer"
  >
    <div
      class="auth-footer"
    />
  </div>
</div>
`;

exports[`v2/view-builder/views/AutoRedirectView view renders corectly - default case 1`] = `
<div
  class="siw-main-view "
>
  <div
    class="siw-main-header"
  >
    <div />
  </div>
  <div
    class="siw-main-body"
  >
    <form
      action="/"
      class="ion-form o-form o-form-edit-mode"
      data-se="o-form"
      id="form7"
      method="POST"
      slot="content"
    >
      <div
        class="o-form-content o-form-theme clearfix"
        data-se="o-form-content"
      >
        <h2
          class="okta-form-title o-form-head"
          data-se="o-form-head"
        >
          Signing in...
        </h2>
        <div
          class="identifier-container"
        >
          <span
            class="identifier no-translate"
            data-se="identifier"
            title="testUser@okta.com"
          >
            testUser@okta.com
          </span>
        </div>
        <div
          class="o-form-info-container"
        />
        <div
          class="o-form-error-container"
          data-se="o-form-error-container"
          role="alert"
        />
        <div
          class="o-form-fieldset-container"
          data-se="o-form-fieldset-container"
        />
      </div>
    </form>
  </div>
  <div
    class="siw-main-footer"
  >
    <div
      class="auth-footer"
    />
  </div>
</div>
`;

exports[`v2/view-builder/views/AutoRedirectView view renders correctly according to interstitialBeforeLoginRedirect: should NOT render spinner 1`] = `
<div
  class="siw-main-view "
>
  <div
    class="siw-main-header"
  >
    <div />
  </div>
  <div
    class="siw-main-body"
  >
    <form
      action="/"
      class="ion-form o-form o-form-edit-mode"
      data-se="o-form"
      id="form23"
      method="POST"
      slot="content"
    >
      <div
        class="o-form-content o-form-theme clearfix"
        data-se="o-form-content"
      >
        <h2
          class="okta-form-title o-form-head"
          data-se="o-form-head"
        >
          Signing in...
        </h2>
        <div
          class="identifier-container"
        >
          <span
            class="identifier no-translate"
            data-se="identifier"
            title="testUser@okta.com"
          >
            testUser@okta.com
          </span>
        </div>
        <div
          class="o-form-info-container"
        />
        <div
          class="o-form-error-container"
          data-se="o-form-error-container"
          role="alert"
        />
        <div
          class="o-form-fieldset-container"
          data-se="o-form-fieldset-container"
        />
      </div>
    </form>
  </div>
  <div
    class="siw-main-footer"
  >
    <div
      class="auth-footer"
    />
  </div>
</div>
`;

exports[`v2/view-builder/views/AutoRedirectView view renders correctly according to interstitialBeforeLoginRedirect: should have spinner, app name, and user identifier 1`] = `
<div
  class="siw-main-view "
>
  <div
    class="siw-main-header"
  >
    <div />
  </div>
  <div
    class="siw-main-body"
  >
    <form
      action="/"
      class="ion-form o-form o-form-edit-mode"
      data-se="o-form"
      id="form39"
      method="POST"
      slot="content"
    >
      <div
        class="o-form-content o-form-theme clearfix"
        data-se="o-form-content"
      >
        <h2
          class="okta-form-title o-form-head"
          data-se="o-form-head"
        >
          Signing in to Okta Administration
        </h2>
        <div
          class="identifier-container"
        >
          <span
            class="identifier no-translate"
            data-se="identifier"
            title="testUser@okta.com"
          >
            testUser@okta.com
          </span>
        </div>
        <div
          class="o-form-info-container"
        />
        <div
          class="o-form-error-container"
          data-se="o-form-error-container"
          role="alert"
        />
        <div
          class="o-form-fieldset-container"
          data-se="o-form-fieldset-container"
        >
          <div
            class="okta-waiting-spinner"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    class="siw-main-footer"
  >
    <div
      class="auth-footer"
    />
  </div>
</div>
`;
